--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -1,9 +1,48 @@
-<p>*為必填欄位</p>
-<h1>請輸入你的支出</h1>
-<form action="/new" method="POST">
-  <div class="form-group">
-    <label for="expenseName">名稱*</label>
-    <input type="text"" class=" form-control" id="expenseName">
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-5">
+      <p>*為必填欄位</p>
+      <p class="font-weight-bold">請輸入你的支出</p>
+    </div>
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+  <div class="row">
+    <form action="/expense/new" method="POST">
+      <div class="form-group row">
+        <label for="expenseName">名稱*</label>
+        <div class="col-10">
+          <input type="text" class=" form-control" id="expenseName" name="expenseName">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="expenseDate">日期*</label>
+        <div class="col-10">
+          <input type="date" class="form-control" id="expenseDate" name="expenseDate">
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="expenseSelect">類別*</label>
+        <div class="col-10">
+          <select class="form-control" id="expenseSelect" name="expenseSelect">
+            <option>家居物業</option>
+            <option>交通出行</option>
+            <option>休閒娛樂</option>
+            <option>餐飲食品</option>
+            <option>其他</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="expenseAmount">金額*</label>
+        <div class="col-10">
+          <input type="number" class="form-control" id="expenseAmount" name="expenseAmount">
+        </div>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+
+  </div>
+
+
+</div>
