--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -6,7 +6,7 @@
     </div>
   </div>
   <div class="row">
-    <form action="/expense/{{{record._id}}}/edit" method="POST">
+    <form action="/expense/{{{record._id}}}?_method=PUT" method="POST">
       <div class="form-group row">
         <label for="expenseName">名稱*</label>
         <div class="col-10">
