--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,7 +12,7 @@
           日期{{{this.date}}}
           金額{{{this.amount}}}
           <a class="btn btn-success" href="expense/{{{this._id}}}/edit">修改</a>
-          <form action="/expense/{{{this._id}}}/delete" method="POST" style="display: inline">
+          <form action="/expense/{{{this._id}}}/delete?_method=DELETE" method="POST" style="display: inline">
             <button class="btn btn-danger" type="submit">刪除</button>
           </form>
         </div>
