--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,12 @@
 <div class="container">
-  總金額: {{{totall}}}
+  <div class="row">
+    <div class="col mb-3"></div>
+    <div class="col mb-3">
+      <h3 class="text-warning display-4">總金額: {{{totall}}}</h1>
+    </div>
+    <div class="col mb-3"></div>
+  </div>
+
   <ul class="list group">
 
     {{#each records}}
@@ -20,9 +27,19 @@
 
     </li>
     {{/each}}
-    <a href="/expense/new">
-      <button type="button" class="btn btn-outline-dark">新增支出</button>
-    </a>
+    <div class="fixed-bottom m-4">
+      <div class="row">
+        <div class="col"></div>
+        <div class="col">
+          <a href="/expense/new" style="color:warning" class="float-right">
+            <span style="color:#ffc107;">
+              <i class="fas fa-plus-circle fa-4x"></i>
+            </span>
+          </a>
+        </div>
+      </div>
+    </div>
+
   </ul>
 </div>
 
