--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,31 +1,40 @@
 <div class="container">
-  <div class="row">
-    <div class="col mb-3"></div>
-    <div class="col mb-3">
-      <h3 class="text-warning display-4">總金額: {{{totall}}}</h1>
+  <div class="row my-3">
+    <div class="col mb-3 border-right">
+      <h3 class="text-warning text-center font-weight-bolder">收入</h3>
     </div>
-    <div class="col mb-3"></div>
+    <div class="col mb-3 border-right">
+      <h3 class="text-warning text-center font-weight-bolder">支出</h3>
+      <p class="h4 text-center font-weight-bolder">{{{totall}}}</p>
+    </div>
+    <div class="col mb-3">
+      <h3 class="text-warning text-center font-weight-bolder">結餘</h3>
+    </div>
   </div>
 
-  <ul class="list group">
-
+  <div class="list group">
     {{#each records}}
-    <li class="list-group-item">
+    <div class="list-group-item mb-2 border-left-0 border-top-0 border-right-0">
       <div class="row">
         <div class="col-auto mr-auto">
-          <h4 style="display: inline;vertical-align: middle;">{{{this.name}}}</h4>
+          <div>
+            <h4 class="font-weight-bolder" style="display: inline;vertical-align: middle;">{{{this.name}}}</h4>
+          </div>
+          <small class="font-weight-bolder">{{{this.date}}}</small>
         </div>
+        <div class="col-auto m-auto">
+          <p class="text-center font-weight-bolder">{{{this.amount}}}</p>
+        </div>
+
+
         <div class="col-auto">
-          日期{{{this.date}}}
-          金額{{{this.amount}}}
-          <a class="btn btn-success" href="expense/{{{this._id}}}/edit">修改</a>
+          <a class="btn btn-success font-weight-bolder" href="expense/{{{this._id}}}/edit">修 改</a>
           <form action="/expense/{{{this._id}}}/delete?_method=DELETE" method="POST" style="display: inline">
-            <button class="btn btn-danger" type="submit">刪除</button>
+            <button class="btn btn-danger font-weight-bolder" type="submit">刪 除</button>
           </form>
         </div>
       </div>
-
-    </li>
+    </div>
     {{/each}}
     <div class="fixed-bottom m-4">
       <div class="row">
@@ -39,11 +48,4 @@
         </div>
       </div>
     </div>
-
-  </ul>
-</div>
-
-
-
-
-</div>
+  </div>
