--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,10 +10,13 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-dark bg-primary">
+  <nav class="navbar navbar-dark bg-warning">
     <div class="container">
-      <a class="navbar-brand" href="/">家庭記帳本</a>
-      <button type="button" class="btn btn-info">登出</button>
+      <a class="navbar-brand font-weight-bolder" href="/">
+
+        <h4><i class="fas fa-money-check-alt"></i> Money Manger</h4>
+      </a>
+      <button type="button" class="btn btn-outline-light">Logout</button>
     </div>
 
   </nav>
