--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
     </div>
     <div class="col mb-3 border-right">
       <h3 class="text-warning text-center font-weight-bolder">支出</h3>
-      <p class="h4 text-center font-weight-bolder">{{{totall}}}</p>
+      <p class="h4 text-center font-weight-bolder">{{{totalAmount}}}</p>
     </div>
     <div class="col mb-3">
       <h3 class="text-warning text-center font-weight-bolder">結餘</h3>
@@ -53,16 +53,14 @@
       </div>
     </div>
     {{/each}}
-    <div class="fixed-bottom m-4">
-      <div class="row">
-        <div class="col"></div>
-        <div class="col">
-          <a href="/expense/new" style="color:warning" class="float-right">
-            <span style="color:#ffc107;">
-              <i class="fas fa-plus-circle fa-4x"></i>
-            </span>
-          </a>
-        </div>
-      </div>
-    </div>
+
   </div>
+</div>
+<div class="position-fixed m-4 justify-content-end float-right"
+  style="bottom: 4.6875rem;position: fixed;z-index: 1035;right: .9375rem;bottom: .9375rem">
+  <a href="/expense/new" style="color:warning" class="float-right">
+    <span style="color:#ffc107;">
+      <i class="fas fa-plus-circle fa-4x"></i>
+    </span>
+  </a>
+</div>
