Prety choose-page

--- a/views/incomeEdit.handlebars
+++ b/views/incomeEdit.handlebars
@@ -4,7 +4,7 @@
     <div class="col-8">
       <div class="row text-center">
         <div class="col-sm mb-3">
-          <h4 class="font-weight-bold text-center">修改支出</h4>
+          <h4 class="font-weight-bold text-center">修改收入</h4>
         </div>
       </div>
       <div class="card p-4">
@@ -27,10 +27,9 @@
               <label for="incomeSelect">類別*</label>
               <div class="col-10">
                 <select class="form-control" id="incomeSelect" name="incomeSelect" value="{{{income.category}}}">
-                  <option>家居物業</option>
-                  <option>交通出行</option>
-                  <option>休閒娛樂</option>
-                  <option>餐飲食品</option>
+                  <option>薪水</option>
+                  <option>家人給</option>
+                  <option>獎金</option>
                   <option>其他</option>
                 </select>
               </div>
