--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -41,7 +41,8 @@
         </span>
         <div class="col-auto mr-auto">
           <div>
-            <h4 class="font-weight-bolder" style="display: inline;vertical-align: middle;">{{{this.name}}}</h4>
+            <h4 class="font-weight-bolder" style="display: inline;vertical-align: middle; letter-spacing: 3px">
+              {{{this.name}}}</h4>
           </div>
           <small class="font-weight-bolder">{{{this.date}}}</small>
         </div>
@@ -81,7 +82,8 @@
         </span>
         <div class="col-auto mr-auto">
           <div>
-            <h4 class="font-weight-bolder" style="display: inline;vertical-align: middle;">{{{this.name}}}</h4>
+            <h4 class="font-weight-bolder" style="display: inline;vertical-align: middle; letter-spacing: 3px">
+              {{{this.name}}}</h4>
           </div>
           <small class="font-weight-bolder">{{{this.date}}}</small>
         </div>
