--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -5,7 +5,7 @@
       <div class="row text-center">
 
         <div class="col-sm mb-3">
-          <h4 class="font-weight-bold text-center">新增支出</h4>
+          <h4 class="font-weight-bold text-center" style="letter-spacing: 8px">新增支出</h4>
         </div>
 
       </div>
