Create filter feature(Auth feature will be later)

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,11 @@
   </nav>
   {{{body}}}
 
+  {{!-- require popper --}}
+  <script src="https://unpkg.com/@popperjs/core@2"></script>
+  {{!-- require fontawesome --}}
   <script src="https://kit.fontawesome.com/116385fd84.js" crossorigin="anonymous"></script>
+  {{!-- require bootstrap --}}
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
