--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,9 +15,53 @@
   </div>
 
   <div class="list group">
-    <div class="m-5">
-      <h3 class="font-weight-bolder" style="letter-spacing: 8px">支出</h3>
+    <div class="row">
+      <div class="col-2 m-5">
+        <h3 class="font-weight-bolder" style="letter-spacing: 8px">支出</h3>
+      </div>
+      <div class="col-5 m-5">
+        {{!-- <form action="/filter" method="POST"> --}}
+
+        <form action="/filter" method="POST">
+
+          <span>支出類別</span>
+          <select name="recordCategorySearch" id="recordCategorySearch">
+            <option class="dropdown-item">全部</option>
+            <option class="dropdown-item"> 家居物業</option>
+            <option class="dropdown-item">交通出行</option>
+            <option class="dropdown-item">休閒娛樂</option>
+            <option class="dropdown-item">餐飲食品</option>
+            <option class="dropdown-item">其他</option>
+
+          </select>
+          <span>收入類別</span>
+          <select name="incomeCategorySearch" id="incomeCategorySearch">
+            <option class="dropdown-item">全部</option>
+            <option class="dropdown-item">薪水</option>
+            <option class="dropdown-item">家人給</option>
+            <option class="dropdown-item">獎金</option>
+            <option class="dropdown-item">其他</option>
+          </select>
+
+
+
+          <button type="submit">篩選</button>
+          {{!-- <select id="recordCategorySearch">
+            <option>全部</option>
+            <option>家居物業</option>
+            <option>交通出行</option>
+            <option>休閒娛樂</option>
+            <option>餐飲食品</option>
+            <option>其他</option>
+          </select> --}}
+        </form>
+
+        {{!-- <button type="submit">篩 選</button>
+        </form> --}}
+      </div>
     </div>
+
+
 
     {{#each recordsList}}
     <div class="list-group-item mb-2 border-left-0 border-top-0 border-right-0">
