--- a/views/incomeEdit.handlebars
+++ b/views/incomeEdit.handlebars
@@ -26,7 +26,8 @@
             <div class=" form-group row justify-content-center">
               <label for="incomeSelect">類別*</label>
               <div class="col-10">
-                <select class="form-control" id="incomeSelect" name="incomeSelect" value="{{{income.category}}}">
+                <select class="form-control" id="incomeSelect" name="incomeSelect">
+                  <option selected>{{{income.category}}}</option>
                   <option>薪水</option>
                   <option>家人給</option>
                   <option>獎金</option>
