--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,11 @@
 
         <h4><i class="fas fa-money-check-alt"></i> Money Manger</h4>
       </a>
-      <button type="button" class="btn btn-outline-light">Logout</button>
+      <a href="/users//logout">
+        <button type="button" class="btn btn-outline-light">Logout</button>
+      </a>
+
+
     </div>
 
   </nav>
