--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,9 +16,15 @@
 
         <h4><i class="fas fa-money-check-alt"></i> Money Manger</h4>
       </a>
+      {{#if isAuthenticated}}
       <a href="/users//logout">
         <button type="button" class="btn btn-outline-light">Logout</button>
       </a>
+      {{else}}
+      <a href="/users//login">
+        <button type="button" class="btn btn-outline-light">Login</button>
+      </a>
+      {{/if}}
 
 
     </div>
