Create user1 seeder ,and Finsh this project

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -58,11 +58,9 @@
         </form>
       </div>
       <div class="col"></div>
-
     </div>
-
-
   </div>
+  {{> messages}}
   <div class="row">
     <div class="col-2 m-5">
       <h3 class="font-weight-bolder" style="letter-spacing: 8px">支出</h3>
