--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -12,7 +12,7 @@
       <div class="card p-4">
         <small class="text-secondary">*為必填</small>
         <div class="card-body">
-
+          {{> messages}}
           <form action="/expense/new" method="POST">
             <div class="form-group row justify-content-center">
               <label for="expenseName">名稱*</label>
