--- a/views/newIncome.handlebars
+++ b/views/newIncome.handlebars
@@ -12,12 +12,12 @@
       <div class="card p-4">
         <small class="text-secondary">*為必填</small>
         <div class="card-body">
-
+          {{> messages}}
           <form action="/income/new" method="POST">
             <div class="form-group row justify-content-center">
               <label for="incomeName">名稱*</label>
               <div class="col-10">
-                <input type="text" class=" form-control" id="incomeName" name="incomeName">
+                <input type="text" class=" form-control" id="incomeName" name="incomeName" value="{{{incomeName}}}">
               </div>
             </div>
             <div class="form-group row justify-content-center">
