Update record and income schema

--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -39,6 +39,12 @@
                 </select>
               </div>
             </div>
+            <div class="form-group row justify-content-center">
+              <label for="expenseMerchant">商家</label>
+              <div class="col-10">
+                <input type="text" class=" form-control" id="expenseMerchant" name="expenseMerchant">
+              </div>
+            </div>
 
             <div class="form-group row justify-content-center">
               <label for="expenseAmount">金額*</label>
