--- a/views/newIncome.handlebars
+++ b/views/newIncome.handlebars
@@ -38,6 +38,12 @@
                 </select>
               </div>
             </div>
+            <div class="form-group row justify-content-center">
+              <label for="incomeMerchant">商家</label>
+              <div class="col-10">
+                <input type="text" class=" form-control" id="incomeMerchant" name="incomeMerchant">
+              </div>
+            </div>
 
             <div class="form-group row justify-content-center">
               <label for="incomeAmount">金額*</label>
