Finsh merchant feature

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -99,6 +99,9 @@
         <small class="font-weight-bolder">{{{this.date}}}</small>
       </div>
       <div class="col m-auto">
+        <p class="text-center font-weight-bolder">{{{this.merchant}}}</p>
+      </div>
+      <div class="col m-auto">
         <p class="text-center font-weight-bolder">{{{this.amount}}}</p>
       </div>
 
@@ -138,6 +141,9 @@
             {{{this.name}}}</h4>
         </div>
         <small class="font-weight-bolder">{{{this.date}}}</small>
+      </div>
+      <div class="col m-auto">
+        <p class="text-center font-weight-bolder">{{{this.merchant}}}</p>
       </div>
       <div class="col m-auto">
         <p class="text-center font-weight-bolder">{{{this.amount}}}</p>
