--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -37,6 +37,13 @@
               </div>
             </div>
             <div class="form-group row justify-content-center">
+              <label for="expenseMerchant">商家</label>
+              <div class="col-10">
+                <input type="text" class=" form-control" id="expenseMerchant" name="expenseMerchant"
+                  value="{{{record.merchant}}}">
+              </div>
+            </div>
+            <div class="form-group row justify-content-center">
               <label for="expenseAmount">金額*</label>
               <div class="col-10">
                 <input type="number" class="form-control" id="expenseAmount" name="expenseAmount"
