--- a/views/incomeEdit.handlebars
+++ b/views/incomeEdit.handlebars
@@ -36,6 +36,13 @@
               </div>
             </div>
             <div class="form-group row justify-content-center">
+              <label for="incomeMerchant">商家</label>
+              <div class="col-10">
+                <input type="text" class=" form-control" id="incomeMerchant" name="incomeMerchant"
+                  value="{{{income.merchant}}}">
+              </div>
+            </div>
+            <div class="form-group row justify-content-center">
               <label for="incomeAmount">金額*</label>
               <div class="col-10">
                 <input type="number" class="form-control" id="incomeAmount" name="incomeAmount"
