Add dateSearch feature

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,10 +21,8 @@
         <form action="/filter" method="POST">
           <div class="form-group row">
             <div class="col-auto">
-              <input type="month" class="custom-select font-weight-bolder" name="dateSearch" id="dateSearch">
-
-
-
+              <input type="month" class="custom-select font-weight-bolder" name="dateSearch" id="dateSearch"
+                value="{{{dateSearch}}}">
               </input>
             </div>
             <div class="col">
